<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:minWidth="350dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:background="@drawable/bg_header"
        android:gravity="center"
        android:text="@string/lbl_set_time"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/lbl_choise_time"
        android:textColor="@color/black_news"
        android:textSize="@dimen/text_small" />

    <NumberPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblSend"
                android:layout_width="@dimen/btn_app_width"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_green"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/lbl_setting"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/lblCancel"
                android:layout_width="@dimen/btn_app_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:background="@drawable/bg_btn_green"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/btn_Cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>