<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:background="@drawable/bg_header"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"        
        android:text="@string/lbl_update_status"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal" />

    <ListView
        android:id="@+id/lsvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblSubmit"
                android:layout_width="@dimen/btn_app_width"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_green"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/lbl_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/lblCancel"
                android:layout_width="@dimen/btn_app_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:background="@drawable/bg_btn_green"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/btn_Cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>